# radio_browser_rust

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  mpv.rs  tui.rs  util.rs
