[package]
name = "redio"
version = "0.1.0"
authors = ["Yuma Nur Alfath <yuma@yumana.my.id>"]
description = "Radio browser app for listening radio online from radio browser"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
radiobrowser = { version = "*", features = ["blocking"] }
clap_complete = "*"
