[package]
name = "redio"
version = "0.3.3"
authors = ["Yuma Nur Alfath <yuma@yumana.my.id>"]
description = "Radio browser app for listening radio online from radio browser"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yumanuralfath/radio_browser_rust"
homepage = "https://yumana.my.id"
keywords = ["radio", "cli", "streaming", "radiobrowser", "mpv"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.6.1", features = ["derive"] }
radiobrowser = { version = "0.6.1", features = ["blocking"] }
clap_complete = "4.6.1"
ratatui = "0.30.1"
crossterm = "0.29.0"
color-eyre = "0.6.5"
